add stripe payments

--- a/lecture/lecture_12_websockets/demo-1-websockets-begin/index.html
+++ b/lecture/lecture_12_websockets/demo-1-websockets-begin/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script>
+        // Client Side Code (front end)
         const socketUrl = "ws://localhost:3000/chatSocket"
         let webSocket = new WebSocket(socketUrl);
 
